Fix skip links behind brandlink

--- a/src/static_src/css/style.css
+++ b/src/static_src/css/style.css
@@ -161,6 +161,7 @@
     position: absolute;
     padding: 1rem;
     gap: 1rem;
+    z-index: 1;
   }
 
   .skip-to-main {
